#+STARTUP:showall
* NEWS (user visible changes & bigger non-visible ones)

* 1.4 (released on January 24, 2026)

  The 1.14 series continues where the 1.12 series left off, with just some
  version updates & depreciations.


* 1.12 (released on February 24, 2024)

  The 1.12 series has been "stable" for a fairly long time, and gained many
  changes in the mean-time. Most of the changes are for bug fixes and
  documentation improvements, but some new features are available as well. Those
  are listed below, with the version in which they first appeared.

** Some highlights

  - Significant speedups in both ~mu~ and ~mu4e~
  - Reworked message composition, closer to its Gnus origins which adds many of
    its features
  - Overhauled the query parser; squashing a number of bugs/limitations, incl.
    dealing with CJK messages
  - Experimental folding of message threads
  - Better and faster indexing of HTML messages
  - Experimental search by (human) language wit CLD2

  For details & more, see below.

*** mu

    - new command ~mu move~ to move messages across maildirs and/or change their
      flags. See the man-page for all the details.

    - ~mu~ commands ~extract~ ~verify~ and ~view~ can now read the message from
      standard input; see their man-pages for details

    - ~mu init~ gained the ~--ignored-address~ option for email-addresses / regexps
      that should _not_ be included in the contacts-cache (i.e., for ~mu cfind~ and
      Mu4e address completion). See the ~mu-init~ manpage for details.

      It's not unusual for ~noreply~-type e-mail addresses to be the majority in
      an e-mail corpus; to get rid of those, with something like
      ~--ignored-address=/.*no.*reply.*/~

    - what used to be the ~mu fields~ command has been merged into ~mu info~; i.e.,
      ~mu fields~ is now ~mu info fields~.

    - ~mu view~ gained ~--format=html~ which compels it to output the HTML body of